# profile_agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  PROFILE_MIGRATION_SUMMARY.md  PROGRESS.md  README.md  package-lock.json  package.json  playground.ipynb
.continue/rules/: CONTINUE.md
agent/: main.py  pyproject.toml
agent/sub_agents/: __init__.py  base.py
agent/sub_agents/conversation_tracker/: __init__.py  main.py  prompts.py  tools.py
agent/sub_agents/email_composer/: __init__.py  main.py  prompts.py  tools.py
agent/sub_agents/models/: agent_inputs.py
agent/sub_agents/recruit_agent/: __init__.py  main.py  prompts.py  tools.py
agent/tools/: __init__.py  agent_wrappers.py
data/: bharath_profile.md
k8s/: README.md
k8s/base/: app-deployment.yaml  app-service.yaml  config-map.yaml  ingress.yaml  kustomization.yaml  profile-config-map.yaml  secret-template.yaml
k8s/overlays/local/: kustomization.yaml
scripts/: build-docker.sh  deploy-k8s.sh  docker-entrypoint.sh  generate_ai_architect_pdf.py  generate_profile_pdf.py  run-agent.bat  run-agent.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/components/: contact-card.tsx  experience-timeline.tsx  person-details.tsx  section-header.tsx  skills-filter.tsx
src/lib/: types.ts
